# advent

./: .pre-commit-config.yaml  LICENSE.md  README.md  README.rst  pyproject.toml  setup.cfg
src/advent/: draw.py  grid.py  load.py  math.py
src/advent/year2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py
src/advent/year2019/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  intcode.py
src/advent/year2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  interpreter.py
src/advent/year2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py
src/advent/year2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day05.txt  day06.py  day07.py  day08.py  day09.py
