[metadata]
name = davidism-advent
version = 1.0.0
url = https://github.com/davidism/advent
author = David Lord
author_email = davidism@gmail.com
license = BSD-3-Clause
license_file = LICENSE.rst
description = davidism's Advent of Code solutions.
long_description = file:README.rst
long_description_content_type = text/x-rst

[options]
package_dir = = src
packages = find:
python_requires = >= 3.8
install_requires =
    attrs
    blessings
    more-itertools
    networkx

[options.packages.find]
where = src

[options.package_data]
* = day*.txt

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
